tests/paczka1/small_fuzzy/32632595.err
Error in line 4: psQcX4dl A9?7 213,8
Error in line 13: 11tUw2H A485 49,5
Error in line 11: S960 A485 78,2
